# libmseed

./: CMakeLists.txt  ChangeLog  INSTALL.md
core/: CMakeLists.txt  libmseed.map
test/: test-extraheaders.c
